fixed whitespace issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
+  width: 100%;
   height: 100%;
-  width: auto;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden
 }
 
 
